# Vanta

./: .gitignore  CMakeLists.txt  vcpkg.json
Editor/: CMakeLists.txt
Editor/src/Editor/: CameraController.cpp  CameraController.hpp  Editor.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp  Utils.cpp  Utils.hpp  ViewportCameraController.cpp  ViewportCameraController.hpp
Editor/src/Editor/Panel/: Console.cpp
Editor/src/Editor/Window/: Console.cpp  Console.hpp  ContentBrowser.cpp  ContentBrowser.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp
Sandbox/: CMakeLists.txt  Sandbox.vproj  Untitled.vproj
Sandbox/Assets/Scenes/: Default.vnta  ManyPlayers.vnta  ManySprites.vnta  Simple.vnta  Test.vnta
Sandbox/Scenes/: ManyPlayers.vnta  ManySprites.vnta  Simple.vnta
Sandbox/Scripts/: CMakeLists.txt
Sandbox/Scripts/CSharp/: Build.bat  CMakeLists.txt
Sandbox/Scripts/Native/: Build.bat  CMakeLists.txt
Sandbox/Scripts/Native/Binaries/: Scripts_Native.exp  Scripts_Native.lib
Sandbox/Scripts/Native/Source/: Camera.hpp  JumpingEntity.cpp  JumpingEntity.hpp
Sandbox/Scripts_CSharp/: Build.bat  CMakeLists.txt
Sandbox/Scripts_Native/: Build.bat  CMakeLists.txt
Sandbox/Scripts_Native/Source/: Camera.cpp  Camera.hpp  JumpingEntity.hpp
Sandbox/scripts/: CMakeLists.txt
Sandbox/scripts/Source/: Camera.cs  Player.cs
Sandbox/src/: Sandbox.cpp
Vanta/: CMakeLists.txt
Vanta-Script/: CMakeLists.txt
Vanta-Script/Source/: App.cs  Entity.cs  Input.cs  Internal.cs  KeyCodes.cs  Math.cs  Player.cs
Vanta-Script/Source/Core/: Internal.cs  Log.cs
Vanta-Script/Source/Input/: KeyCode.cs  MouseButton.cs
Vanta-Script/Source/Math/: Math.cs
Vanta-Script/Source/Scene/: Entity.cs
Vanta-ScriptCore-Native/: CMakeLists.txt
Vanta-ScriptCore-Native/Vanta/: Vanta.hpp
Vanta-ScriptCore-Native/Vanta/Base/: Definitions.hpp  Platform.hpp  Types.hpp
Vanta-ScriptCore-Native/Vanta/Core/: Log.hpp  UUID.hpp
Vanta-ScriptCore-Native/Vanta/Input/: Input.hpp
Vanta-ScriptCore-Native/Vanta/Math/: Vector.hpp
Vanta-ScriptCore-Native/Vanta/Module/: Interface.cpp  Interface.hpp  Registry.hpp
Vanta-ScriptCore-Native/Vanta/Scene/: Components.cpp  Components.hpp  Entity.hpp
Vanta-Scripts/: CMakeLists.txt
Vanta-Scripts/Source/Input/: Input.cs
Vanta-Scripts/Source/Scene/: Components.cs
Vanta-Tests/: CMakeLists.txt
Vanta-Tests/src/: Tests.cpp
Vanta/assets/Shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Texture.glsl
Vanta/resources/Shaders/: Renderer2D_Circle.glsl
Vanta/src/: vantapch.hpp
Vanta/src/Platform/OpenGL/: Buffer.cpp  Context.cpp  Framebuffer.cpp  GraphicsAPI.cpp  GraphicsAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Vanta/src/Platform/OpenGL/Render/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsAPI.cpp  Shader.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp
Vanta/src/Platform/Windows/: Input.cpp  PlatformUtils.cpp  Window.cpp
Vanta/src/Platform/Windows/Core/: Window.cpp  Window.hpp
Vanta/src/Vanta/: Config.hpp  EntryPoint.hpp  Vanta.hpp
Vanta/src/Vanta/Core/: Assert.hpp  Buffer.hpp  Config.hpp  Definitions.hpp  Engine.cpp  Engine.hpp  EntryPoint.cpp  Fibers.cpp  Fibers.hpp  GUILayer.cpp  GUILayer.hpp  GuiLayer.cpp  GuiLayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Types.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp
Vanta/src/Vanta/Debug/: Instrumentor.cpp  Instrumentor.hpp
Vanta/src/Vanta/Entity/: Buffer.hpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
Vanta/src/Vanta/Event/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Vanta/src/Vanta/GUI/: GuiLayer.cpp  GuiLayer.hpp  ImGui.cpp  ImGuiConsole.cpp  ImGuiConsole.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Vanta/src/Vanta/IO/: File.cpp  File.hpp  IO.hpp  Image.cpp  Image.hpp
Vanta/src/Vanta/Input/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Vanta/src/Vanta/Project/: Project.cpp  Project.hpp  Serializer.cpp  Serializer.hpp
Vanta/src/Vanta/Render/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsAPI.cpp  GraphicsAPI.hpp  GraphicsContext.cpp  GraphicsContext.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Vanta/src/Vanta/Scene/: Buffer.hpp  BufferedRegistry.cpp  BufferedRegistry.hpp  Components.cpp  Components.hpp  Dispatch.hpp  Entity.cpp  Entity.hpp  NativeScript.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  Serializer.cpp  Serializer.hpp  SerializerHelper.hpp
Vanta/src/Vanta/Scene/Components/: BoxCollider2DComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  CircleCollider2DComponent.hpp  CircleRendererComponent.hpp  IDComponent.hpp  NativeScriptComponent.cpp  NativeScriptComponent.hpp  Rigidbody2DComponent.hpp  ScriptComponent.cpp  ScriptComponent.hpp  SpriteComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
Vanta/src/Vanta/Script/: Class.cpp  Class.hpp  Field.cpp  Field.hpp  Interface.cpp  Interface.hpp  NativeScript.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Vanta/src/Vanta/Scripts/: ScriptEngine.hpp
Vanta/src/Vanta/Scripts/CSharp/: Class.cpp  Class.hpp  Field.cpp  Field.hpp  Interface.cpp  Interface.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Vanta/src/Vanta/Scripts/CSharp/BuildTemplate/: Build.bat  CMakeLists.txt
Vanta/src/Vanta/Scripts/Native/: Assembly.cpp  Assembly.hpp  Class.cpp  Class.hpp  Field.cpp  Field.hpp  Interface.cpp  Interface.hpp  ScriptEngine.cpp  ScriptEngine.hpp
Vanta/src/Vanta/Scripts/Native/BuildTemplate/: Build.bat  CMakeLists.txt
Vanta/src/Vanta/Scripts/Native/Module/: Assembly.cpp  Assembly.hpp  Shared.hpp  Vanta.cpp  Vanta.hpp
Vanta/src/Vanta/Util/: Format.hpp  Iterator.hpp  Math.cpp  Math.hpp  PlatformUtils.hpp  StaticString.hpp  String.hpp  TemplateUtils.hpp  Time.cpp  Time.hpp  Util.cpp  Util.hpp
(+21 files in other folders)
