cmake_minimum_required(VERSION 3.20)
project(Vanta-ScriptCore-Native LANGUAGES C CXX)

set(${PROJECT_NAME}_SOURCE
    "Vanta/Module/Interface.cpp"
    "Vanta/Scene/Components.cpp"
)

add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}_SOURCE})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_compile_definitions(${PROJECT_NAME} PUBLIC -DVANTA_MODULE)

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${VANTA_SCRIPT_DIRECTORY}/Native"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${VANTA_SCRIPT_DIRECTORY}/Native"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${VANTA_SCRIPT_DIRECTORY}/Native"

    ARCHIVE_OUTPUT_DIRECTORY "${VANTA_SCRIPT_DIRECTORY}/Native"
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${VANTA_SCRIPT_DIRECTORY}/Native"
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${VANTA_SCRIPT_DIRECTORY}/Native"

    LIBRARY_OUTPUT_DIRECTORY "${VANTA_SCRIPT_DIRECTORY}/Native"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${VANTA_SCRIPT_DIRECTORY}/Native"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${VANTA_SCRIPT_DIRECTORY}/Native"
)

add_custom_command(
    TARGET ${PROJECT_NAME} PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_SOURCE_DIR}/Vanta/src/Vanta/Base" "${CMAKE_CURRENT_SOURCE_DIR}/Vanta/Base")

add_custom_command(
    TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_CURRENT_SOURCE_DIR}/Vanta" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Resources/Scripts/Native/include/Vanta")
