cmake_minimum_required(VERSION 3.20)
project(Vanta-Scripts VERSION 0.1.0 LANGUAGES CSharp)

set(VANTA_SCRIPT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/Resources/Scripts" CACHE INTERNAL "")

set(${PROJECT_NAME}_SOURCE
    "Source/Core/Internal.cs"
    "Source/Core/Log.cs"
    "Source/Input/Input.cs"
    "Source/Input/KeyCode.cs"
    "Source/Input/MouseButton.cs"
    "Source/Math/Math.cs"
    "Source/Scene/Components.cs"
    "Source/Scene/Entity.cs"
)

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCE})

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.1")

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}

    ARCHIVE_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}

    LIBRARY_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}
)
