cmake_minimum_required(VERSION 3.20)
project(Scripts_CSharp VERSION 0.1.0 LANGUAGES CSharp)

set(${PROJECT_NAME}_SOURCE
    "CSharp/Camera.cs"
    "CSharp/Player.cs"
)

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCE})

target_link_libraries(${PROJECT_NAME} ${VANTA_CSHARP_LIB})

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.1")

set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/Binary")

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)