cmake_minimum_required(VERSION 3.20)
project(Sandbox-Script VERSION 0.1.0 LANGUAGES CSharp)

set(${PROJECT_NAME}_SOURCE
    "Source/Player.cs"
)

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCE})

target_link_libraries(${PROJECT_NAME} Vanta-Script)

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.1")

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}

    ARCHIVE_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}

    LIBRARY_OUTPUT_DIRECTORY ${VANTA_SCRIPT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${VANTA_SCRIPT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${VANTA_SCRIPT_DIRECTORY}
)