cmake_minimum_required(VERSION 3.20)
project(Scripts_Native VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)

set(VANTA_LIB "" CACHE STRING "Path to Vanta library directory")
set(VANTA_INCLUDE "" CACHE STRING "Path to Vanta include directory")

file(GLOB_RECURSE ${PROJECT_NAME}_SOURCE "Source/*.cpp")

set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/../Binaries")

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCE})

target_link_libraries(${PROJECT_NAME} PRIVATE "${VANTA_LIB}/Vanta-ScriptCore-Native.lib")
target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${VANTA_INCLUDE})

target_compile_definitions(${PROJECT_NAME} PRIVATE -DVANTA_MODULE)

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)