R"=(
cmake_minimum_required(VERSION 3.20)
project(Scripts_CSharp VERSION 0.1.0 LANGUAGES CSharp)

set(VANTA_LIB "" CACHE STRING "Path to Vanta-ScriptCore-CSharp.dll")

set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/../Binaries")

file(GLOB_RECURSE ${PROJECT_NAME}_SOURCE "Source/*.cs")

add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCE})

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.2")

set_target_properties(${PROJECT_NAME} PROPERTIES
    VS_DOTNET_REFERENCES "${VS_DOTNET_REFERENCES}"
    VS_DOTNET_REFERENCE_Vanta-ScriptCore-CSharp "${VANTA_LIB}")

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}

    LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}
)
)="